fix(mobile) Tabbar streches to children, which covers background fully
Problem
Tabbar was not covering background, since it was to small (did not
stretch to contents)

Solution
Make tabbar stretch and cover page background

Reviewed-on: http://AMDC2476:8080/291
Tested-by: Jenkins

--- a/src/css/profile/mobile/changeable/common/tabbar.less
+++ b/src/css/profile/mobile/changeable/common/tabbar.less
@@ -3,6 +3,7 @@
 //**************************************************************************
 
 .ui-tabbar {
+	display: table;
 	width: 100%;
 	height: 110 * @unit_base;
 
